* Minor update: (xxxxxx)
- Added [QJDK18, NGinX, InfluxDB2] to the ALPHA list.
- Added [Autobrr, Traefik] to the OMEGA list.

* Minor update: (220322)
- Code: ensure 'autofix' doesn't run if QPKG is disabled.

* Minor update: (220219)
- Added [QPython310] to the ALPHA list.

* Minor update: (220210)
- Code: ensure sorter executes on shutdown.

* Minor update: (211207)
- Added [QX11, QJDK17, Apache81] to the OMEGA list.
- Added [Sonarr3] to the OMEGA list.

* Minor update: (211030)
- Added [MRadarr, SickChill80, MLidarr] to the OMEGA list.
- Code: renamed service script file from [sort-my-qpkgs.sh] to [sortmyqpkgs.sh].

* Minor update: (210926)
- Added [java-installer, FileBot, filebot-node] to the ALPHA list.

* Minor update: (210924)
- Added [MustangUserDriver, TomCat10, MariaDB5, MariaDB10] to the ALPHA list.
- Added new 'device drivers' section.
- Code: fix a few ShellCheck pickups.

* Minor update: (210708c)
- Code: ensure service script always returns 0.

* Minor update: (210708b)
- Code: ensure both custom files can be backed-up without error.

* Minor update: (210708)
- Added [Tailscale] to the ALPHA list.
- Added [OpenHab3] to the OMEGA list.
- Removed max QTS version.

* Minor update: (210605)
- Added [MUSL_CROSS, QPython39] to the ALPHA list.
- Added [MTransmission3] to the OMEGA list.

* Minor update: (210520)
- Re-enable sorting for OMEGA packages (broken due to mods in 210413).
- Added [QJDK16] to the ALPHA list.

* Minor update: (210502)
- Re-enable sorting operations (broken due to mods in 210413).

* Minor update: (210413)
- Add 'backup', 'restore' and 'reset' operations for custom lists.

* Minor update: (210328)
- Open sorting log in a new QTS window instead of a new page.

* Minor update: (210323)
- Added [V4LDrivers, RltkWifi2b, RltkWifi1c, Erlang, QuestDB, Dolt] to the ALPHA list.

* Minor update: (201228)
- Added [PostgreSQLPremium13] to the ALPHA list.
- include fix to enable App Center icon in QTS 4.5.1.

* Minor update: (201206)