@@ -1,5 +1,5 @@
 QPKG_NAME="SortMyQPKGs"
-QPKG_VER="220805"
+QPKG_VER="220809"
 QPKG_AUTHOR="OneCD"
 QPKG_SUMMARY="An automated sorter for installed QPKGs to ensure they launch in correct sequence when your NAS next powers-up"
 QPKG_RC_NUM="500"
